Removed Java 5 dependency
git-svn-id: http://svn.codehaus.org/geoserver/branches/1.5.x@5801 ef1d6e69-97e5-0310-af46-8a06194da32a

Former-commit-id: 60908708ad7e1171bf7033636335986cf64f3468 [formerly 43ab12d6ab7d6cb36f77d6b41b303fdb86a42fcb]
Former-commit-id: 39065f438758ab6d5318aeaff67339656d43ce08